@@ -2,30 +2,63 @@ package seedu.address.model.file;
 
 import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
 import seedu.address.model.tag.Tag;
+import seedu.address.model.util.FileNameUtil;
 
 /**
  * Represents an Encrypted File in SecureIT.
  */
 public class EncryptedFile {
+    public static final String PREFIX = "[LOCKED]";
+
     private final FileName fileName;
     private final FilePath filePath;
-    private final EncryptedAt encryptedAt;
+    private EncryptedAt encryptedAt;
+    private ModifiedAt modifiedAt;
+    private FileStatus status;
 
     private final Set<Tag> tags = new HashSet<>();
 
-    public EncryptedFile(FileName fileName, FilePath filePath, EncryptedAt encryptedAt, Set<Tag> tags) {
-        requireAllNonNull(fileName, filePath, encryptedAt, tags);
+    public EncryptedFile(FileName fileName,
+                         FilePath filePath,
+                         Set<Tag> tags) {
+        this(fileName, filePath, FileStatus.ACTIVE, tags);
+    }
+
+    public EncryptedFile(FileName fileName,
+                         FilePath filePath,
+                         FileStatus status,
+                         Set<Tag> tags) {
+        requireAllNonNull(fileName, filePath, tags);
         this.fileName = fileName;
         this.filePath = filePath;
-        this.encryptedAt = encryptedAt;
+        this.status = status;
         this.tags.addAll(tags);
+    }
+
+    public EncryptedFile(FileName fileName,
+                         FilePath filePath,
+                         Set<Tag> tags,
+                         boolean withPrefix) {
+        this(new FileName(FileNameUtil.getFileNameWithoutPrefix(fileName.value)), filePath, tags);
+    }
+
+    public EncryptedFile(FileName fileName,
+                         FilePath filePath,
+                         FileStatus status,
+                         Set<Tag> tags,
+                         EncryptedAt encryptedAt,
+                         ModifiedAt modifiedAt) {
+        this(fileName, filePath, status, tags);
+        requireAllNonNull(encryptedAt, modifiedAt);
+        this.encryptedAt = encryptedAt;
+        this.modifiedAt = modifiedAt;
     }
 
     public FileName getFileName() {
@@ -36,8 +69,28 @@ public class EncryptedFile {
         return filePath;
     }
 
+    public FileStatus getFileStatus() {
+        return status;
+    }
+
+    public void setFileStatus(FileStatus value) {
+        status = value;
+    }
+
+    public void setEncryptedAt(EncryptedAt value) {
+        encryptedAt = value;
+    }
+
     public EncryptedAt getEncryptedAt() {
         return encryptedAt;
+    }
+
+    public void setModifiedAt(ModifiedAt value) {
+        modifiedAt = value;
+    }
+
+    public ModifiedAt getModifiedAt() {
+        return modifiedAt;
     }
 
     /**
@@ -52,14 +105,15 @@ public class EncryptedFile {
      * Returns the full path of the file in string.
      */
     public String getFullPath() {
-        return Paths.get(getFilePath().value + "/" + getFileName()).toString();
+        return Path.of(getFilePath().value).resolve(Path.of(getFileName().value)).toString();
     }
 
     /**
      * Returns the full path of the encrypted file in string.
      */
     public String getEncryptedPath() {
-        return Paths.get(getFilePath().value + "/[LOCKED] " + getFileName()).toString();
+        return Path.of(getFilePath().value)
+                .resolve(FileNameUtil.getFileNameWithPrefix(getFileName().value)).toString();
     }
 
     @Override
@@ -76,12 +130,14 @@ public class EncryptedFile {
         return otherFile.getFileName().equals(getFileName())
                 && otherFile.getFilePath().equals(getFilePath())
                 && otherFile.getEncryptedAt().equals(getEncryptedAt())
+                && otherFile.getModifiedAt().equals(getModifiedAt())
+                && otherFile.getFileStatus().equals(getFileStatus())
                 && otherFile.getTags().equals(getTags());
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(fileName, filePath, encryptedAt, tags);
+        return Objects.hash(fileName, filePath, encryptedAt, modifiedAt, status, tags);
     }
 
     @Override
